--- a/src/configs/sketchConfig.json
+++ b/src/configs/sketchConfig.json
@@ -1,7 +1,10 @@
 {
+    "config": [
+        "./src/configs/baseConfig.json"
+    ],
     "base": 22,
     "dtype": "uint64",
-    "dfNorm": "/home/swei20/sketch-scale/out/dfNorm.csv",
+    "dfNorm": "./out/dfNorm.csv",
     "saveStream": false,
 
     "sketchMode": "exact",
